@@ -250,6 +250,14 @@
       permission="zope2.View"
       />
 
+    <browser:page
+      for="*"
+      name="display-grouped-configs"
+      template="templates/grouped_configs.pt"
+      class=".views.DisplayMeetingConfigsOfConfigGroup"
+      permission="zope2.View"
+      />
+
     <!-- a view that will make some utils available -->
     <browser:page
         for="*"
@@ -770,5 +778,13 @@
         class=".overrides.PMContentHistoryView"
         layer="imio.history.interfaces.IImioHistoryLayer"
         permission="zope.Public" />
+
+    <browser:page
+        for="*"
+        name="portal_tabs_view"
+        class=".overrides.PMCatalogNavigationTabs"
+        permission="zope.Public"
+        allowed_attributes="topLevelTabs"
+        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer" />
 
 </configure>
