@@ -51,6 +51,7 @@ from imio.history.browser.views import IHDocumentBylineViewlet
 from imio.prettylink.interfaces import IPrettyLink
 
 from Products.CMFCore.permissions import ModifyPortalContent
+from Products.CMFPlone.browser.navigation import CatalogNavigationTabs
 from Products.CMFPlone.utils import safe_unicode
 from Products.CPUtils.Extensions.utils import check_zope_admin
 from Products.PloneMeeting import utils as pm_utils
@@ -77,7 +78,7 @@ class PMFolderContentsView(FolderContentsView):
         # alsoProvides(request, IContentsPage)
 
 
-class PloneMeetingGlobalSectionsViewlet(GlobalSectionsViewlet):
+class PMGlobalSectionsViewlet(GlobalSectionsViewlet):
     '''
       Overrides the selectedTabs method so the right MeetingConfig tab
       is selected when a user is on the item of another user
@@ -127,13 +128,13 @@ class PloneMeetingGlobalSectionsViewlet(GlobalSectionsViewlet):
         return {'portal': default_tab}
 
 
-class PloneMeetingDocumentBylineViewlet(IHDocumentBylineViewlet):
+class PMDocumentBylineViewlet(IHDocumentBylineViewlet):
     '''
       Overrides the IHDocumentBylineViewlet to hide it for some layouts.
     '''
 
     def show(self):
-        oldShow = super(PloneMeetingDocumentBylineViewlet, self).show()
+        oldShow = super(PMDocumentBylineViewlet, self).show()
         if not oldShow:
             return False
         else:
@@ -1167,3 +1168,21 @@ class PMContentHistoryView(IHContentHistoryView):
       We want to display the content_history as a table.
     '''
     histories_to_handle = (u'revision', u'workflow', u'data_changes')
+
+
+class PMCatalogNavigationTabs(CatalogNavigationTabs):
+    """ """
+
+    def topLevelTabs(self, actions=None, category='portal_tabs'):
+        tabs = super(PMCatalogNavigationTabs, self).topLevelTabs(actions, category)
+        tool = api.portal.get_tool('portal_plonemeeting')
+        for cfg in tool.objectValues('MeetingConfig'):
+            cfgId = cfg.getId()
+            if tool.showPloneMeetingTab(cfgId):
+                data = {
+                    'name': cfg.Title(),
+                    'id': 'mc_{0}'.format(cfg.getId()),
+                    'url': tool.getPloneMeetingFolder(cfgId).absolute_url() + "/searches_items",
+                    'description': ''}
+                tabs.append(data)
+        return tabs
