@@ -1,0 +1,19 @@
+<tal:sections tal:define="portal_tabs view/portal_tabs"
+     tal:condition="portal_tabs"
+     i18n:domain="plone">
+    <p class="hiddenStructure" i18n:translate="heading_sections">Navigation</p>
+
+    <ul id="portal-globalnav"
+        tal:define="selected_tab python:view.selected_portal_tab"
+        ><tal:tabs tal:repeat="tab portal_tabs"
+        ><li tal:define="tid tab/id"
+             tal:attributes="id string:portaltab-${tid};
+                            class python:selected_tab==tid and 'selected' or 'plain'"
+            ><a href=""
+               tal:content="tab/name"
+               tal:attributes="href tab/url;
+                               title tab/description|nothing;
+                               target tab/link_target|nothing;">
+            Tab Name
+            </a></li></tal:tabs></ul>
+</tal:sections>
